--- a/QGT_Simulation.ipynb
+++ b/QGT_Simulation.ipynb
@@ -6,7 +6,7 @@
       "name": "QGT_Simulation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyONFMxK3UaPndsssBPs4LJs",
+      "authorship_tag": "ABX9TyOCoSXzno0NhRoO7fEmQdBW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "height": 1000
         },
         "id": "b9YyYhaNsOLX",
-        "outputId": "2ebf8e9d-0fe1-47df-ef87-7429bc2e5a14"
+        "outputId": "ea2f870f-9e73-4337-eae1-591b321345b7"
       },
       "source": [
         "from mpl_toolkits.mplot3d import Axes3D\r\n",
@@ -75,7 +75,7 @@
         "fig.colorbar(surf, shrink=0.5, aspect=5)\r\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -99,12 +99,12 @@
       },
       "source": [
         "def func(X, Y, phi):\r\n",
-        "    R =  np.cos(X) * np.cos(Y) - np.exp(phi*j) * np.sin(X) * np.sin(Y) + np.exp(phi*j) * np.cos(X) * np.sin(Y) + np.sin(X) * np.cos(Y)\r\n",
-        "    Z = np.square(np.absolute(R)) - 1\r\n",
+        "    R =   np.cos(X) * np.cos(Y) -  np.power(e, -1 * phi*j) * np.sin(X) * np.sin(Y) + np.power(e, -1 * phi*j) * np.cos(X) * np.sin(Y) + np.sin(X) * np.cos(Y)\r\n",
+        "    Z = np.square(np.real(R)) + np.square(np.imag(R)) - 1\r\n",
         "    return Z\r\n",
         " "
       ],
-      "execution_count": 51,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
           "height": 609
         },
         "id": "YOxUY28za8gi",
-        "outputId": "83bf1e8a-8887-4c60-ace7-10c8a728e202"
+        "outputId": "3eb457df-ebd3-4589-86dd-21ca91dc6288"
       },
       "source": [
         "fig = plt.figure(figsize=[15,10])\r\n",
@@ -139,7 +139,7 @@
         "plt.legend() \r\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -153,6 +153,67 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cBLrvimy0pDC"
+      },
+      "source": [
+        "def unitary(lam, phi=0):\n",
+        "    U = np.matrix([[np.exp(j*phi) * np.cos(lam), -1 * np.sin(lam)], [ np.sin(lam), np.exp(-j*phi) * np.cos(lam)]])\n",
+        "    U = np.around(U, decimals=8)\n",
+        "    return U\n",
+        "\n",
+        "def channelBasis(dim):\n",
+        "    basis = []\n",
+        "    for i in range(0, dim):\n",
+        "        channel = np.zeros((dim,1))\n",
+        "        channel[i] = 1\n",
+        "        basis.append(channel)\n",
+        "    basis = np.asarray(basis)\n",
+        "    return basis\n",
+        "\n",
+        "def normalizedSum(channels):\n",
+        "    return 1/np.sqrt(np.size(channels, axis=1)) * np.sum(channels, axis = 1)\n",
+        "\n",
+        "def projector(qubit):\n",
+        "    return qubit * np.transpose(qubit)"
+      ],
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "53YaFcBM3MUR",
+        "outputId": "e82f9c39-dabc-46e4-c36c-d4cad1e40502",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "N = 2\n",
+        "channels = channelBasis(N)\n",
+        "players = channelBasis(2)\n",
+        "normalizedSum(channels)\n"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.70710678],\n",
+              "       [0.70710678]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
         }
       ]
     }
