Added supplementary functions

--- a/QGT_Simulation.ipynb
+++ b/QGT_Simulation.ipynb
@@ -6,7 +6,7 @@
       "name": "QGT_Simulation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCoSXzno0NhRoO7fEmQdBW",
+      "authorship_tag": "ABX9TyN20OOYac691Xy0isS016SJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,47 +173,73 @@
         "        channel = np.zeros((dim,1))\n",
         "        channel[i] = 1\n",
         "        basis.append(channel)\n",
-        "    basis = np.asarray(basis)\n",
+        "    basis = np.asarray(basis, dtype='complex128')\n",
         "    return basis\n",
         "\n",
         "def normalizedSum(channels):\n",
         "    return 1/np.sqrt(np.size(channels, axis=1)) * np.sum(channels, axis = 1)\n",
         "\n",
         "def projector(qubit):\n",
-        "    return qubit * np.transpose(qubit)"
+        "    return qubit * np.transpose(qubit)\n",
+        "\n",
+        "def stratMatrix(moves, channels):\n",
+        "    strat = []\n",
+        "    for i in range(np.size(moves, axis=1)):\n",
+        "        strat.append(np.kron(moves[i], projector(channels[i])))\n",
+        "    return np.sum(strat,axis =0)\n",
+        "\n",
+        "def magQubit(player, channel, psi):\n",
+        "    return np.transpose(np.kron(player, channel)) * psi"
       ],
-      "execution_count": 68,
+      "execution_count": 105,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "53YaFcBM3MUR",
-        "outputId": "e82f9c39-dabc-46e4-c36c-d4cad1e40502",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "53YaFcBM3MUR"
       },
       "source": [
         "N = 2\n",
         "channels = channelBasis(N)\n",
         "players = channelBasis(2)\n",
-        "normalizedSum(channels)\n"
+        "psiI = np.kron(normalizedSum(players), normalizedSum(channels))\n",
+        "movesB = np.asarray([unitary(pi/4), unitary(pi/4)])\n",
+        "movesE = np.asarray([unitary(-pi/4), unitary(-pi/4)])\n"
       ],
-      "execution_count": 69,
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "495B2jJzCN28",
+        "outputId": "add56261-16c2-4c90-c839-09fe9eeaf6b2"
+      },
+      "source": [
+        "UB = stratMatrix(movesB, channels)\n",
+        "UE = stratMatrix(movesE, channels)\n",
+        "psiF = UB * UE \n",
+        "np.size(psiF)\n",
+        "np.size(psiI)\n",
+        "# np.kron(players[0], channels[0])"
+      ],
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.70710678],\n",
-              "       [0.70710678]])"
+              "4"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 133
         }
       ]
     }
