--- a/QGT_Simulation.ipynb
+++ b/QGT_Simulation.ipynb
@@ -6,7 +6,7 @@
       "name": "QGT_Simulation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZwMx1mX/RZjpPlq40Wk/u",
+      "authorship_tag": "ABX9TyPbN1kRfW3A8zxwqIYJ5ohw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,16 +117,16 @@
         "        self.players = self.channelBasis(2)\n",
         "        self.N = N\n",
         "        self.psiI = np.kron(self.normalizedSum(self.players), self.normalizedSum(self.channels))\n",
-        "        self.movesB = np.asarrary([])\n",
-        "        self.movesE = np.asarrary([])\n",
-        "        self.psiF = \n",
+        "        self.movesB = np.asarray([])\n",
+        "        self.movesE = np.asarray([])\n",
+        "        self.psiF = self.psiI\n",
         "\n",
-        "    def unitary(lam, phi=0):\n",
+        "    def unitary(self, lam, phi=0):\n",
         "        U = np.matrix([[np.exp(j*phi) * np.cos(lam), -1 * np.sin(lam)], [ np.sin(lam), np.exp(-j*phi) * np.cos(lam)]])\n",
         "        U = np.around(U, decimals=8)\n",
         "        return U\n",
         "\n",
-        "    def channelBasis(dim):\n",
+        "    def channelBasis(self, dim):\n",
         "        basis = []\n",
         "        for i in range(0, dim):\n",
         "            channel = np.zeros((dim,1))\n",
@@ -135,30 +135,35 @@
         "        basis = np.asarray(basis, dtype='complex128')\n",
         "        return basis\n",
         "\n",
-        "    def normalizedSum(channels):\n",
+        "    def normalizedSum(self, channels):\n",
         "        return 1/np.sqrt(np.size(channels, axis=1)) * np.sum(channels, axis = 1)\n",
         "\n",
-        "    def projector(qubit):\n",
+        "    def projector(self, qubit):\n",
         "        return np.dot(qubit, np.transpose(qubit))\n",
         "\n",
-        "    def stratMatrix(moves, channels):\n",
+        "    def stratMatrix(self, moves, channels):\n",
         "        strat = []\n",
         "        for i in range(np.size(moves, axis=1)):\n",
         "            strat.append(np.kron(moves[i], projector(channels[i])))\n",
         "        return np.sum(strat,axis =0)\n",
         "\n",
-        "    def magQubit(player, channel, psi, N):\n",
-        "        return np.sign(np.dot(np.transpose(np.kron(player, channel)), psi) - 1/(2*self.N)).item()\n",
+        "    def magQubit(self, p, c):\n",
+        "        return np.sign(np.around(np.dot(np.transpose(np.kron(self.players[p], self.channels[c])), self.psiF) - 1/(2*self.N), decimals=8)).real.item()\n",
         "\n",
-        "    def createRealMoves(strategy, angles):\n",
+        "    def createRealMoves(self, angles):\n",
         "        moves = []\n",
         "        for angle in angles:\n",
         "            moves.append(self.unitary(angle))\n",
         "        moves = np.asarray(moves)\n",
         "        return moves\n",
-        "    def calculateOutcome()"
+        "\n",
+        "    def calculateOutcome(self):\n",
+        "        UB = stratMatrix(self.movesB, self.channels)\n",
+        "        UE = stratMatrix(self.movesE, self.channels)\n",
+        "        print(np.dot(UB, UE))\n",
+        "        self.psiF = np.square(np.dot(np.dot(UB, UE), psiI))\n"
       ],
-      "execution_count": 172,
+      "execution_count": 211,
       "outputs": []
     },
     {
@@ -168,28 +173,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "495B2jJzCN28",
-        "outputId": "f3c61331-4e91-49ba-f2a9-691a812c3f01"
+        "outputId": "cd82a697-035c-45d0-fe45-4e7cabab4a1e"
       },
       "source": [
-        "UB = stratMatrix(movesB, channels)\n",
-        "UE = stratMatrix(movesB, channels)\n",
-        "psiF = np.square(np.dot(np.dot(UB, UE), psiI))\n",
-        "magQubit(players[0], channels[0], psiF, N)\n",
-        "# np.kron(players[0], channels[0])"
+        "Q1 = QuantumGame(2)\n",
+        "Q1.movesB = Q1.createRealMoves([pi/4, pi/4])\n",
+        "Q1.movesE = Q1.createRealMoves([-pi/4, -pi/4])\n",
+        "Q1.calculateOutcome()\n",
+        "Q1.magQubit(0,0)"
       ],
-      "execution_count": 173,
+      "execution_count": 212,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 9.99999997e-01+0.j  0.00000000e+00+0.j -1.18727821e-17+0.j\n",
+            "   0.00000000e+00+0.j]\n",
+            " [ 0.00000000e+00+0.j  9.99999997e-01+0.j  0.00000000e+00+0.j\n",
+            "  -1.18727821e-17+0.j]\n",
+            " [-1.18727821e-17+0.j  0.00000000e+00+0.j  9.99999997e-01+0.j\n",
+            "   0.00000000e+00+0.j]\n",
+            " [ 0.00000000e+00+0.j -1.18727821e-17+0.j  0.00000000e+00+0.j\n",
+            "   9.99999997e-01+0.j]]\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(1+0j)"
+              "0.0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 212
         }
       ]
     },
