--- a/QGT_Simulation.ipynb
+++ b/QGT_Simulation.ipynb
@@ -6,7 +6,7 @@
       "name": "QGT_Simulation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPNF0bBw9HYrLhE+Sv2AqUi",
+      "authorship_tag": "ABX9TyOGJtdDwNAZWmIFMS7zchxr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "pi = np.pi\r\n",
         "e = np.e"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "        return mag\n",
         "    \n",
         "    def signedMagQubit(self, p, c):\n",
-        "        mag = np.sign(magQubit(self, p, c))\n",
+        "        mag = np.sign(self.magQubit(self, p, c))\n",
         "        return mag\n",
         "\n",
         "\n",
@@ -113,7 +113,7 @@
         "        UE = self.stratMatrix(self.movesE)\n",
         "        self.psiF = np.dot(np.dot(UE, UB), self.psiI)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "495B2jJzCN28",
-        "outputId": "cc864d29-cb05-49e4-b403-438675d18c50"
+        "outputId": "a9f2ca77-1f01-4621-9ee9-73048fe4031e"
       },
       "source": [
         "# Classes default call\n",
@@ -133,7 +133,7 @@
         "Q1.calculateOutcome()\n",
         "Q1.magQubit(0,0)"
       ],
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 12
         }
       ]
     },
@@ -157,7 +157,7 @@
           "height": 1000
         },
         "id": "yEu1nIk1JPAA",
-        "outputId": "b9f77832-d87e-4bd6-f486-74c49fd313e5"
+        "outputId": "a44ee17f-11c6-423c-c7f7-98599f2056f5"
       },
       "source": [
         "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -198,7 +198,7 @@
         "fig.colorbar(surf, shrink=0.5, aspect=5)\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "error",
@@ -207,9 +207,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-b8687ef571f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mQplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmovesE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQ1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateRealMoves\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mQplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculateOutcome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mZ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignedMagQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-7-86325e62e4bb>\u001b[0m in \u001b[0;36msignedMagQubit\u001b[0;34m(self, p, c)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msignedMagQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mmag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msignedMagQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mmag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'signedMagQubit' is not defined"
+            "\u001b[0;32m<ipython-input-13-b8687ef571f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mQplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmovesE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQ1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateRealMoves\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mQplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculateOutcome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mZ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignedMagQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-c6ec6d2d6087>\u001b[0m in \u001b[0;36msignedMagQubit\u001b[0;34m(self, p, c)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msignedMagQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mmag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mmag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'magQubit' is not defined"
           ]
         },
         {
