--- a/QGT_Simulation.ipynb
+++ b/QGT_Simulation.ipynb
@@ -6,7 +6,7 @@
       "name": "QGT_Simulation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPtnsTB/a1Koo0Gqy1h+JEw",
+      "authorship_tag": "ABX9TyP2z11Y6g3ZOgTnrHWH/nyx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,7 @@
       },
       "source": [
         "import numpy as np\n",
+        "import pickle\n",
         "\n",
         "# Make data.\n",
         "pi = np.pi\n",
@@ -123,7 +124,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "495B2jJzCN28",
-        "outputId": "2e7993bc-8a8b-45e6-c92e-54cefcb37047"
+        "outputId": "b76f3af1-ca93-4a35-fe56-4a5885eeb980"
       },
       "source": [
         "# Classes default call\n",
@@ -157,7 +158,7 @@
           "height": 1000
         },
         "id": "yEu1nIk1JPAA",
-        "outputId": "723ef13e-77a8-449b-f19f-453f55b118fc"
+        "outputId": "e127af53-779d-4bb0-ee5d-63cb6006a1e8"
       },
       "source": [
         "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -201,9 +202,10 @@
         "plt.ylabel(r'$\\lambda_{E}$', fontsize = 18)\n",
         "\n",
         "fig.colorbar(surf, shrink=0.5, aspect=5)\n",
+        "plt.savefig(\"normal-game.svg\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,9 +270,9 @@
         "    axs[1].set_title(r'$\\widehat{U}_{B}.\\widehat{U}_{E}$')\n",
         "\n",
         "# show a legend on the plot\n",
-        "plt.show()"
+        "plt.savefig(\"commutative.svg\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -343,7 +345,8 @@
         "    plt.ylabel(r'$\\phi_{E}$', fontsize = 18)\n",
         "    ax.title.set_text(r'$\\lambda_{B} = \\pi/$'+ str(XMoves[itr]) + r' $\\lambda_{E} = -\\pi/$' + str(YMoves[itr]))\n",
         "    fig.colorbar(surf, shrink=0.5, aspect=5)\n",
-        "plt.show()"
+        "plt.show()\n",
+        "plt.savefig(\"3d.svg\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -449,9 +452,10 @@
         "axs[1].set_xlabel('Iteration', fontsize = 18) \n",
         "axs[1].set_ylabel('Move', fontsize = 18) \n",
         "axs[1].legend()\n",
-        "print(results)"
+        "print(results)\n",
+        "plt.savefig(\"countermoves.svg\")"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
